    variables of turbo_lanczos.x and turbo_davidson.x. Instead, they are read 
    from the XML file produced by pw.x. The variable real_space_debug was removed.

Known problems in version 6.4:
  * Frequent "dexx is negative" errors with hybrid functionals
  * restart of ph.x when using 2D boundary conditions fails see issue#102 on gitLab 

New in 6.3 version:
  * New implementation, using  a more robust algorithm for the Wigner-Seitz 
    construction in EPW (Samuel Ponce and Carla Verdi) 
  * New application for optical spectra computation using optimized basis sets 
   (Paolo Umari, Nicola Marzari and Giovanni Prandini).  

  * Improved interface between TDDFPT and Environ using plugins( Oliviero Andreussi)  

  * Improved FFT threading (Ye Luo, Argonne)

  * EXX: ACE can be projected on arbitrary number of orbitals
    Slight change in SCF convergence with ACE (dexx) properly
    accounting for difference between 2*<new|V(old)|new> 
    and <new|V(old)|new> + <old|V(new)|old>  (see "fock3" term) 
    SCDM and localized exchange is now compatible with ecutfock
    Localized exchange can deal with virtual orbitals (empty bands)
    (Ivan Carnimeo)

  * Spin-polarized X3LYP (experimental)

  * EPW: Electronic transport (Boltzmann transport equation)
         Iterative Boltzmann transport equation (experimental)
         Improved way to compute Wigner-Seitz vectors 
         Cumulant treatement (model)
         Possible screening
         Support for exclude bands
         Calculation of velocity beyond the local approximation (experimental)

Problems fixed in 6.3 version:

  * Stress with hybrid functionals and Gamma point was grossly wrong
    (5ed148646)

  * EPW: Velocity in the dipole approximation was unstable because of 
    G-vector ordering. 

  * Real-space augmentation functions were crashing with -nt N option

  * Calculation of ELF wasn't always working due to a bad usage of FFT
    descriptors - noticed by Enrique Zanardi Maffiotte (commit a86fb75d)
