@@ -29,7 +29,7 @@ MODULE pw_restart_new
                           qexsd_init_dipole_info, qexsd_init_total_energy,             &
                           qexsd_init_forces,qexsd_init_stress, qexsd_xf,               &
                           qexsd_init_outputElectricField,                              &
-                          qexsd_input_obj, qexsd_occ_obj, qexsd_smear_obj,             &
+                          qexsd_input_obj, qexsd_occ_obj,                               &
                           qexsd_init_outputPBC, qexsd_init_gate_info, qexsd_init_hybrid,&
                           qexsd_init_dftU, qexsd_init_vdw
   USE io_global, ONLY : ionode, ionode_id
@@ -74,7 +74,7 @@ MODULE pw_restart_new
       USE wavefunctions, ONLY : evc
       USE klist,                ONLY : nks, nkstot, xk, ngk, wk, &
                                        lgauss, ngauss, smearing, degauss, nelec, &
-                                       two_fermi_energies, nelup, neldw, tot_charge
+                                       two_fermi_energies, nelup, neldw, tot_charge, ltetra 
       USE start_k,              ONLY : nk1, nk2, nk3, k1, k2, k3, &
                                        nks_start, xk_start, wk_start
       USE gvect,                ONLY : ngm, ngm_g, g, mill
@@ -153,7 +153,7 @@ MODULE pw_restart_new
       CHARACTER(LEN=15)        :: symop_2_class(48)
       LOGICAL                  :: opt_conv_ispresent, dft_is_vdw, empirical_vdw
       INTEGER                  :: n_opt_steps, n_scf_steps_, h_band
-      REAL(DP)                 :: h_energy
+      REAL(DP),TARGET                 :: h_energy
       TYPE(gateInfo_type),TARGET      :: gate_info_temp
       TYPE(gateInfo_type),POINTER     :: gate_info_ptr => NULL()
       TYPE(dipoleOutput_type),TARGET  :: dipol_obj 
@@ -186,10 +186,12 @@ MODULE pw_restart_new
       REAL(DP),POINTER           :: vdw_term_pt =>NULL(), ts_thr_pt=>NULL(), london_s6_pt=>NULL(),&
                                     london_rcut_pt=>NULL(), xdm_a1_pt=>NULL(), xdm_a2_pt=>NULL(), &
                                     ts_vdw_econv_thr_pt=>NULL(), ectuvcut_opt=>NULL(), scr_par_opt=>NULL(), &
-                                    loc_thr_p => NULL() 
+                                    loc_thr_p => NULL(), h_energy_ptr => NULL()  
       LOGICAL,TARGET             :: dftd3_threebody_, ts_vdw_isolated_
       LOGICAL,POINTER            :: ts_isol_pt=>NULL(), dftd3_threebody_pt=>NULL(), ts_vdw_isolated_pt =>NULL()
       INTEGER,POINTER            :: dftd3_version_pt => NULL() 
+      TYPE(smearing_type),TARGET :: smear_obj 
+      TYPE(smearing_type),POINTER:: smear_obj_ptr => NULL() 
 
       NULLIFY( degauss_, demet_, efield_corr, potstat_corr, gatefield_corr )
 
@@ -490,10 +492,11 @@ MODULE pw_restart_new
          !
          IF ( TRIM(what) == "init-config" ) GO TO 10
          !
-         IF (TRIM(input_parameters_occupations) == 'fixed') THEN 
+         IF ( .NOT. ( lgauss .OR. ltetra )) THEN 
             occupations_are_fixed = .TRUE.
             CALL get_homo_lumo( h_energy, lumo_tmp)
             h_energy = h_energy/e2
+            h_energy_ptr => h_energy 
             IF ( lumo_tmp .LT. 1.d+6 ) THEN
                 lumo_tmp = lumo_tmp/e2
                 lumo_energy => lumo_tmp
@@ -523,31 +526,29 @@ MODULE pw_restart_new
                ELSE 
                   ef_updw = [ef_up/e2, ef_dw/e2]
                END IF
-         ELSE
+         ELSE IF (ltetra .OR. lgauss) THEN  
                 ef_targ = ef/e2
                 ef_point => ef_targ
          END IF
 
 
-         IF (TRIM(input_parameters_occupations) == 'smearing' ) THEN
+         IF ( lgauss ) THEN
             IF (TRIM(qexsd_input_obj%tagname) == 'input') THEN 
-               qexsd_smear_obj = qexsd_input_obj%bands%smearing
+               smear_obj = qexsd_input_obj%bands%smearing
             ELSE 
-               CALL qexsd_init_smearing(qexsd_smear_obj, smearing, degauss)
+               CALL qexsd_init_smearing(smear_obj, smearing, degauss)
             END IF  
-            !  
-            CALL qexsd_init_band_structure(  output%band_structure,lsda,noncolin,lspinorb, nelec, natomwfc, &
-                                 et, wg, nkstot, xk, ngk_g, wk, SMEARING = qexsd_smear_obj,  &
-                                 STARTING_KPOINTS = qexsd_start_k_obj, OCCUPATIONS_KIND = qexsd_occ_obj, &
-                                 WF_COLLECTED = wf_collect, NBND = nbnd, FERMI_ENERGY = ef_point, EF_UPDW = ef_updw )
-            CALL qes_reset (qexsd_smear_obj)
-         ELSE     
-            CALL  qexsd_init_band_structure(output%band_structure,lsda, noncolin,lspinorb, nelec, natomwfc, &
-                                et, wg, nkstot, xk, ngk_g, wk, &
-                                STARTING_KPOINTS =  qexsd_start_k_obj, OCCUPATIONS_KIND = qexsd_occ_obj,&
-                                WF_COLLECTED = wf_collect , NBND = nbnd, HOMO = h_energy, LUMO = lumo_energy , &
-                                EF_UPDW = ef_updw )
+            smear_obj_ptr => smear_obj  
          END IF 
+         !  
+            
+         CALL qexsd_init_band_structure(  output%band_structure,lsda,noncolin,lspinorb, nelec, natomwfc, &
+                                 et, wg, nkstot, xk, ngk_g, wk, SMEARING = smear_obj_ptr,  &
+                                 STARTING_KPOINTS = qexsd_start_k_obj, OCCUPATIONS_KIND = qexsd_occ_obj, &
+                                 WF_COLLECTED = wf_collect, NBND = nbnd, FERMI_ENERGY = ef_point, EF_UPDW = ef_updw,& 
+                                 HOMO = h_energy_ptr, LUMO = lumo_energy )
+         ! 
+         IF (lgauss)  CALL qes_reset (smear_obj)
          CALL qes_reset (qexsd_start_k_obj)
          CALL qes_reset (qexsd_occ_obj)
          !
